@@ -1,4 +1,5 @@
 4.0
+ * simplify mx4j configuration (Cassandra-13578)
  * Fix trigger example on 4.0 (CASSANDRA-13796)
  * force minumum timeout value (CASSANDRA-9375)
  * use netty for streaming (CASSANDRA-12229)
